--- a/ComicServer/app/views/Templates/ReaderTemplate.scala.html
+++ b/ComicServer/app/views/Templates/ReaderTemplate.scala.html
@@ -1,3 +1,6 @@
 <div id="comicImages" class="spread1">
-
+    <div class="vertical-button-container vertical-button-container-top"><div id="topButton" class="tap-target tap-target-horizontal" >Toggle Top Bar</div></div>
+    <div class="vertical-button-container vertical-button-container-bottom"><div id="bottomButton" class="tap-target tap-target-horizontal" >Bottom Button</div></div>
+    <div id="leftButton" class="tap-target tap-target-vertical" >Left Button</div>
+    <div id="rightButton" class="tap-target tap-target-vertical" >Right Button</div>
 </div>
