--- a/ComicServer/app/views/main.scala.html
+++ b/ComicServer/app/views/main.scala.html
@@ -9,6 +9,7 @@
         
         <script src="@routes.Assets.at("javascripts/jquery-1.9.1.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/jquery.mobile.custom.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/jquerymobile-swipeupdown.js")" type="text/javascript"></script>
 
 	    <link href="@routes.Assets.at("bootstrap/css/bootstrap.css")" rel="stylesheet">
 	    <link href="@routes.Assets.at("stylesheets/main.css")" rel="stylesheet">
@@ -32,7 +33,7 @@
 		
 		<div id="main" class="show-action-bar show-top-bar">
             <div class="top-bar-container">
-                <div class="top-bar navbar navbar-inverse navbar-static-top hidden-xs">
+                <div class="top-bar navbar navbar-inverse navbar-static-top hidden-xs hidden-sm hidden-md">
                     <div class="navbar-inner">
                         <div class="">
                             <ul class = "nav navbar-nav">
@@ -45,7 +46,8 @@
                                 <li style="display: none;"><a href="javascript:none;" title="v key" id="fitVertical"><i class="fitVerticalButton glyphicon glyphicon-resize-vertical"></i> Fit Vertical</a></a></li>
                                 <li style="display: none;"><a href="javascript:none;" title="h key" id="fitHorizontal"><i class="fitHorizontalButton glyphicon glyphicon-resize-horizontal"></i> Fit Horizontal</a></a></li>
                                 <li style="display: none;"><a href="javascript:none;" title="b key" id="fitBoth"><i class="fitBothButton glyphicon glyphicon-move"></i> Fit Both</a></a></li>
-                                <li style="display: none;"><a href="javascript:none;" id="hideTop"><i class="hideTopButton glyphicon glyphicon glyphicon-resize-full"></i> Hide Top Bar</a></a></li>
+                                <li style="display: none;"><a href="javascript:none;" id="hideTop"><i class="hideTopButton glyphicon glyphicon glyphicon-fullscreen"></i> Hide Top Bar</a></a></li>
+                                <li style="display: none;"><a href="javascript:none;" id="toggleTapTarget"><i class="toggleTapTarget glyphicon glyphicon-th-large"></i> Toggle Tap Targets</a></a></li>
                                 <li style="display: none;"><a href="javascript:none;" title="f key" id="fullSpread"><i class="glyphicon glyphicon-pause"></i> Full Spread View</a></a></li>
                                 <li style="display: none;"><a href="javascript:none;" title="s key" id="singlePage"><i class="glyphicon glyphicon-stop"></i> Single Page View</a></a></li>
                             </ul>
@@ -57,7 +59,7 @@
                     </div>
                 </div>
 
-                <div class="top-bar navbar navbar-inverse navbar-static-top visible-xs-block">
+                <div class="top-bar navbar navbar-inverse navbar-static-top visible-xs-block visible-sm-block visible-md-block">
                     <div class="navbar-inner">
                         <div class="">
                             <ul class = "nav navbar-nav">
@@ -76,7 +78,8 @@
                                 </li>                            <li class="pull-left" style="display: none;"><a href="javascript:none;" title="v key" id="fitVerticalxs"><i class="fitVerticalButton glyphicon glyphicon-resize-vertical"></i></a></a></li>
                                 <li class="pull-left" style="display: none;"><a href="javascript:none;" title="h key" id="fitHorizontalxs"><i class="fitHorizontalButton glyphicon glyphicon-resize-horizontal"></i></a></a></li>
                                 <li class="pull-left" style="display: none;"><a href="javascript:none;" title="b key" id="fitBothxs"><i class="fitBothButton glyphicon glyphicon-move"></i></a></a></li>
-                                <li class="pull-left" style="display: none;"><a href="javascript:none;" title="b key" id="hideTopxs"><i class="hideTopButton glyphicon glyphicon-resize-full"></i></a></a></li>
+                                <li class="pull-left" style="display: none;"><a href="javascript:none;" title="h key" id="hideTopxs"><i class="hideTopButton glyphicon glyphicon-fullscreen"></i></a></a></li>
+                                <li class="pull-left" style="display: none;"><a href="javascript:none;" title="t key" id="toggleTapTargetxs"><i class="toggleTapTarget glyphicon glyphicon-th-large"></i></a></a></li>
                             </ul>
                         </div>
                     </div>
