--- a/ComicServer/public/stylesheets/main.css
+++ b/ComicServer/public/stylesheets/main.css
@@ -10,6 +10,11 @@
 			  color: #fff;
 			}
 
+            .top-bar {
+                margin-bottom: 0px;
+                border: 0px;
+            }
+
 			#comicImages {
 			  text-align: left;
 			}
@@ -198,4 +203,65 @@
 
 			.modal-header {
               border-bottom: 1px solid #555;
+            }
+
+
+            .show-tap-target .tap-target {
+                opacity: 0.7;
+            }
+
+            .tap-target {
+                position:fixed;
+                opacity: 0;
+            }
+
+            .tap-target-horizontal{
+                height:80px;
+                position: relative;
+                background-color: red;
+                margin-left:80px;
+                margin-right:80px;
+                font-size:2em;
+                text-align: center;
+                color: #FFFFFF;
+            }
+
+            .tap-target-vertical{
+                width:80px;
+                height:100%;
+                background-color: green;
+            }
+
+            .vertical-button-container{
+                position: fixed;
+                right:0px;
+                width: 100%;
+                height: 80px;
+            }
+
+            .show-top-bar .vertical-button-container-top{
+                top:50px;
+            }
+            .vertical-button-container-top{
+                top:0px;
+            }
+
+            .vertical-button-container-bottom{
+                bottom:0px;
+            }
+
+            #topButton {
+                top:0px;
+            }
+
+            #bottomButton {
+                bottom:0px;
+            }
+
+            #rightButton{
+                right:0px;
+            }
+
+            #leftButton{
+                left:0px;
             }
